cluster/apps/nginx/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx

spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: pod-http-port
  selector:
    app: nginx
